# Neumann

./: .dockerignore  .gitignore  .markdownlint.json  .markdownlintignore  .yamllint  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  MUTATION_TESTING_RESULTS.md  README.md  ROADMAP.md  SECURITY.md  agent.md  bench-thresholds.toml  clippy.toml  deny.toml  docker-compose.jepsen-5node.yml  docker-compose.jepsen.yml  docker-compose.yml  install.sh  mutants.toml  rustfmt.toml
examples/: Cargo.toml  basic_relational.rs  graph_traversal.rs  unified_query.rs  vector_search.rs  web_admin.rs
examples/src/: lib.rs
experiments/: Cargo.toml
experiments/src/: lib.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: archetype_registry.rs  atomic_io.rs  blob_chunker.rs  blob_metadata_roundtrip.rs  block_request_validation.rs  block_validate.rs  cache_eviction_scorer.rs  cache_lifecycle.rs  cache_metric_roundtrip.rs  cache_semantic_search.rs  chain_append.rs  chain_metrics.rs  checkpoint_snapshot_parse.rs  checkpoint_state.rs  codebook_quantize.rs  compress_ids.rs  compress_rle.rs  compress_snapshot.rs  consensus_conflict.rs  consensus_merge.rs  consistent_hash.rs  delta_apply.rs  delta_batch_apply.rs  delta_checksum.rs  delta_quantize.rs  delta_vector_roundtrip.rs  distance_metrics.rs  distributed_tx_concurrency.rs  distributed_tx_coordinator.rs  distributed_tx_sequence.rs  distributed_tx_serialize.rs  dtx_deadlock_2pc_flow.rs  dtx_persistence.rs  dtx_state_cleanup.rs  dtx_toctou_stress.rs  dtx_wait_graph_lock_integration.rs  dtx_wal_recovery.rs  durable_blob_crash.rs  entity_index_ops.rs  error_hierarchy.rs  (+99 more)
graph_engine/: Cargo.toml
graph_engine/benches/: graph_engine_bench.rs
graph_engine/src/: config.rs  distributed.rs  error.rs  fulltext.rs  geo.rs  lib.rs  metrics.rs  partitioning.rs  tests.rs
integration_tests/: Cargo.toml
integration_tests/src/: chaos.rs  docker_jepsen.rs  dst.rs  jepsen.rs  jepsen_client.rs  lib.rs  linearizability.rs  network_proxy.rs  process_jepsen.rs
integration_tests/tests/: archetype_persistence.rs  asymmetric_connectivity.rs  atomic_snapshot.rs  auto_init.rs  batch_operations.rs  blob_embedding_search.rs  blob_lifecycle.rs  cache_advanced.rs  cache_background_eviction.rs  cache_geometry.rs  cache_invalidation.rs  chain_concurrent_append.rs  chaos_combined.rs  checkpoint.rs  client_server.rs  clock_drift.rs  cluster_startup.rs  columnar_storage.rs  concurrency.rs  crash_recovery_raft.rs  cross_engine.rs  cross_engine_atomicity.rs  deadlock_detection.rs  delete_consistency.rs  delta_replication_integration.rs  distance_metrics.rs  distributed_2pc.rs  distributed_chain.rs  distributed_integration.rs  distributed_queries.rs  distributed_tx.rs  distributed_tx_concurrency.rs  dst_2pc.rs  dst_raft.rs  dtx_crash_recovery.rs  dtx_deadlock_2pc.rs  dtx_state_cleanup.rs  dtx_toctou_safety.rs  dtx_wait_graph_integration.rs  durable_blob_crash.rs  (+74 more)
neumann-py/: .coverage  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  pyproject.toml
neumann-py/neumann-native/: Cargo.toml
neumann-py/tests/: __init__.py  test_aio_client.py  test_aio_transaction.py  test_blob_service.py  test_client.py  test_config.py  test_errors.py  test_integrations.py  test_retry.py  test_transaction.py  test_types.py  test_vector_service.py
neumann_client/: Cargo.toml  README.md  build.rs
neumann_client/src/: error.rs  lib.rs
neumann_client/tests/: integration.rs
neumann_docs/: Cargo.toml
neumann_docs/src/: commands.rs  embeddings.rs  indexer.rs  lib.rs  main.rs  markdown.rs
neumann_parser/: Cargo.toml
neumann_parser/benches/: neumann_parser_bench.rs
neumann_parser/src/: ast.rs  cypher.rs  error.rs  expr.rs  lexer.rs  lib.rs  parser.rs  span.rs  token.rs
neumann_server/: Cargo.toml  build.rs
neumann_server/benches/: web_bench.rs
neumann_server/proto/: neumann.proto  vector.proto
neumann_server/src/: audit.rs  auth.rs  config.rs  convert.rs  correlation.rs  error.rs  lib.rs  main.rs  memory.rs  metrics.rs  rate_limit.rs  shutdown.rs  signals.rs  tls_loader.rs
neumann_server/tests/: grpc_integration.rs  grpc_vector_collections.rs  grpc_vector_points.rs  integration.rs  web_integration.rs
neumann_shell/: Cargo.toml  README.md  build.rs
neumann_shell/benches/: neumann_shell_bench.rs
neumann_shell/src/: cli.rs  lib.rs  main.rs  wal.rs
query_router/: Cargo.toml  handlers_to_add.rs  new_structs.rs
query_router/benches/: query_router_bench.rs
query_router/src/: cursor.rs  cursor_store.rs  cypher.rs  distributed.rs  lib.rs
relational_engine/: Cargo.toml
relational_engine/benches/: relational_engine_bench.rs
relational_engine/src/: cursor.rs  lib.rs  observability.rs  simd.rs  tensor_eval_tests.rs  tests.rs  transaction.rs
seed_model/: Cargo.toml  README.md
seed_model/src/: corpus.rs  lib.rs  main.rs  sparse_model.rs
stress_tests/: Cargo.toml
stress_tests/src/: config.rs  generators.rs  lib.rs  metrics.rs
stress_tests/tests/: bloom_filter_stress.rs  cache_stress.rs  clock_drift_stress.rs  crash_recovery_stress.rs  duration_stress.rs  graph_128_thread_stress.rs  graph_aggregation_stress.rs  graph_algorithm_stress.rs  graph_concurrency_stress.rs  graph_index_stress.rs  graph_mixed_batch_stress.rs  graph_toctou_stress.rs  hnsw_concurrency_stress.rs  hnsw_stress.rs  mixed_workload_stress.rs  network_partition_stress.rs  partition_churn_stress.rs  postgresql_scaling_comparison.rs  query_router_stress.rs  slab_router_stress.rs  tensor_chain_stress.rs  tensor_compress_stress.rs  tensor_store_stress.rs  tiered_store_stress.rs
tensor_blob/: Cargo.toml
tensor_blob/benches/: blob_bench.rs
tensor_blob/src/: chunker.rs  config.rs  durable.rs  error.rs  gc.rs  integrity.rs  lib.rs  metadata.rs  streaming.rs
tensor_cache/: Cargo.toml
tensor_cache/src/: lib.rs  (+10 more)
tensor_chain/: Cargo.toml
tensor_checkpoint/: Cargo.toml
tensor_compress/: Cargo.toml
tensor_store/: Cargo.toml
tensor_unified/: Cargo.toml
tensor_vault/: Cargo.toml
vector_engine/: Cargo.toml
(+583 files in other folders)
