[package]
name = "experiments"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Research and experimental features for Neumann"
publish = false

[dependencies]
tensor_store = { path = "../tensor_store" }
tensor_chain = { path = "../tensor_chain" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
rustc-hash = "2.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "geometry_comparison_bench"
harness = false
