[package]
name = "neumann-fuzz"
version = "0.0.0"
edition = "2021"
publish = false
license = "MIT"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

# Crates to fuzz
neumann_parser = { path = "../neumann_parser" }
tensor_compress = { path = "../tensor_compress" }
tensor_vault = { path = "../tensor_vault", features = ["fuzzing"] }
tensor_checkpoint = { path = "../tensor_checkpoint" }
tensor_store = { path = "../tensor_store" }
tensor_chain = { path = "../tensor_chain" }
bincode = "1.3"
serde_json = "1"

# Tier 1: Parser targets

[[bin]]
name = "parser_parse"
path = "fuzz_targets/parser_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parser_parse_all"
path = "fuzz_targets/parser_parse_all.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parser_parse_expr"
path = "fuzz_targets/parser_parse_expr.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parser_tokenize"
path = "fuzz_targets/parser_tokenize.rs"
test = false
doc = false
bench = false

# Tier 2: Compression targets

[[bin]]
name = "compress_ids"
path = "fuzz_targets/compress_ids.rs"
test = false
doc = false
bench = false

[[bin]]
name = "compress_rle"
path = "fuzz_targets/compress_rle.rs"
test = false
doc = false
bench = false

[[bin]]
name = "compress_snapshot"
path = "fuzz_targets/compress_snapshot.rs"
test = false
doc = false
bench = false

# Tier 2: Crypto target

[[bin]]
name = "vault_cipher"
path = "fuzz_targets/vault_cipher.rs"
test = false
doc = false
bench = false

# Tier 2: Checkpoint target

[[bin]]
name = "checkpoint_state"
path = "fuzz_targets/checkpoint_state.rs"
test = false
doc = false
bench = false

# Tier 3: Storage targets

[[bin]]
name = "storage_sparse_vector"
path = "fuzz_targets/storage_sparse_vector.rs"
test = false
doc = false
bench = false

[[bin]]
name = "slab_entity_index"
path = "fuzz_targets/slab_entity_index.rs"
test = false
doc = false
bench = false

# Tier 3: Distributed targets

[[bin]]
name = "consistent_hash"
path = "fuzz_targets/consistent_hash.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tcp_framing"
path = "fuzz_targets/tcp_framing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "membership"
path = "fuzz_targets/membership.rs"
test = false
doc = false
bench = false

# Tier 4: Phase 2 targets

[[bin]]
name = "semantic_partition"
path = "fuzz_targets/semantic_partition.rs"
test = false
doc = false
bench = false

[[bin]]
name = "consensus_merge"
path = "fuzz_targets/consensus_merge.rs"
test = false
doc = false
bench = false

[[bin]]
name = "codebook_quantize"
path = "fuzz_targets/codebook_quantize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "block_validate"
path = "fuzz_targets/block_validate.rs"
test = false
doc = false
bench = false

# Tier 5: Phase 3 targets - Distributed Transactions

[[bin]]
name = "distributed_tx_serialize"
path = "fuzz_targets/distributed_tx_serialize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "distributed_tx_coordinator"
path = "fuzz_targets/distributed_tx_coordinator.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lock_manager"
path = "fuzz_targets/lock_manager.rs"
test = false
doc = false
bench = false

# Tier 6: Phase 4 targets - Distributed Systems Finalization

[[bin]]
name = "delta_quantize"
path = "fuzz_targets/delta_quantize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "raft_messages"
path = "fuzz_targets/raft_messages.rs"
test = false
doc = false
bench = false
