[package]
name = "neumann-fuzz"
version = "0.0.0"
edition = "2021"
publish = false
license = "MIT"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
tempfile = "3"

# Crates to fuzz
neumann_parser = { path = "../neumann_parser" }
tensor_compress = { path = "../tensor_compress" }
tensor_vault = { path = "../tensor_vault", features = ["fuzzing"] }
tensor_checkpoint = { path = "../tensor_checkpoint" }
tensor_store = { path = "../tensor_store" }
tensor_chain = { path = "../tensor_chain" }
tensor_cache = { path = "../tensor_cache" }
relational_engine = { path = "../relational_engine", features = ["test-internals"] }
graph_engine = { path = "../graph_engine" }
vector_engine = { path = "../vector_engine" }
bitcode = { version = "0.6", features = ["serde"] }
serde_json = "1"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }

# Tier 1: Parser targets

[[bin]]
name = "parser_parse"
path = "fuzz_targets/parser_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parser_parse_all"
path = "fuzz_targets/parser_parse_all.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parser_parse_expr"
path = "fuzz_targets/parser_parse_expr.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parser_tokenize"
path = "fuzz_targets/parser_tokenize.rs"
test = false
doc = false
bench = false

# Tier 2: Compression targets

[[bin]]
name = "compress_ids"
path = "fuzz_targets/compress_ids.rs"
test = false
doc = false
bench = false

[[bin]]
name = "compress_rle"
path = "fuzz_targets/compress_rle.rs"
test = false
doc = false
bench = false

[[bin]]
name = "compress_snapshot"
path = "fuzz_targets/compress_snapshot.rs"
test = false
doc = false
bench = false

# Tier 2: Crypto target

[[bin]]
name = "vault_cipher"
path = "fuzz_targets/vault_cipher.rs"
test = false
doc = false
bench = false

# Tier 2: Checkpoint target

[[bin]]
name = "checkpoint_state"
path = "fuzz_targets/checkpoint_state.rs"
test = false
doc = false
bench = false

# Tier 3: Storage targets

[[bin]]
name = "storage_sparse_vector"
path = "fuzz_targets/storage_sparse_vector.rs"
test = false
doc = false
bench = false

[[bin]]
name = "slab_entity_index"
path = "fuzz_targets/slab_entity_index.rs"
test = false
doc = false
bench = false

# Tier 3: Distributed targets

[[bin]]
name = "consistent_hash"
path = "fuzz_targets/consistent_hash.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tcp_framing"
path = "fuzz_targets/tcp_framing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tcp_compression"
path = "fuzz_targets/tcp_compression.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tcp_rate_limit"
path = "fuzz_targets/tcp_rate_limit.rs"
test = false
doc = false
bench = false

[[bin]]
name = "membership"
path = "fuzz_targets/membership.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gossip_signed"
path = "fuzz_targets/gossip_signed.rs"
test = false
doc = false
bench = false

# Tier 4: Phase 2 targets

[[bin]]
name = "semantic_partition"
path = "fuzz_targets/semantic_partition.rs"
test = false
doc = false
bench = false

[[bin]]
name = "consensus_merge"
path = "fuzz_targets/consensus_merge.rs"
test = false
doc = false
bench = false

[[bin]]
name = "codebook_quantize"
path = "fuzz_targets/codebook_quantize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "block_validate"
path = "fuzz_targets/block_validate.rs"
test = false
doc = false
bench = false

# Tier 5: Phase 3 targets - Distributed Transactions

[[bin]]
name = "distributed_tx_serialize"
path = "fuzz_targets/distributed_tx_serialize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "distributed_tx_coordinator"
path = "fuzz_targets/distributed_tx_coordinator.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lock_manager"
path = "fuzz_targets/lock_manager.rs"
test = false
doc = false
bench = false

# Tier 6: Phase 4 targets - Distributed Systems Finalization

[[bin]]
name = "delta_quantize"
path = "fuzz_targets/delta_quantize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "raft_messages"
path = "fuzz_targets/raft_messages.rs"
test = false
doc = false
bench = false

# Tier 7: Relational engine targets

[[bin]]
name = "relational_condition"
path = "fuzz_targets/relational_condition.rs"
test = false
doc = false
bench = false

[[bin]]
name = "relational_engine_ops"
path = "fuzz_targets/relational_engine_ops.rs"
test = false
doc = false
bench = false

[[bin]]
name = "relational_index_serialization"
path = "fuzz_targets/relational_index_serialization.rs"
test = false
doc = false
bench = false

[[bin]]
name = "relational_schema_parsing"
path = "fuzz_targets/relational_schema_parsing.rs"
test = false
doc = false
bench = false

# Tier 8: Cache targets

[[bin]]
name = "cache_eviction_scorer"
path = "fuzz_targets/cache_eviction_scorer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cache_semantic_search"
path = "fuzz_targets/cache_semantic_search.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cache_metric_roundtrip"
path = "fuzz_targets/cache_metric_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cache_lifecycle"
path = "fuzz_targets/cache_lifecycle.rs"
test = false
doc = false
bench = false

# Tier 9: Tensor Train compression targets

[[bin]]
name = "tt_roundtrip"
path = "fuzz_targets/tt_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "streaming_format"
path = "fuzz_targets/streaming_format.rs"
test = false
doc = false
bench = false

[[bin]]
name = "delta_apply"
path = "fuzz_targets/delta_apply.rs"
test = false
doc = false
bench = false

# Tier 10: Sparse compression targets

[[bin]]
name = "tt_config_validation"
path = "fuzz_targets/tt_config_validation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sparse_embedding_slab"
path = "fuzz_targets/sparse_embedding_slab.rs"
test = false
doc = false
bench = false

# Tier 11: TT advanced targets

[[bin]]
name = "tt_metrics"
path = "fuzz_targets/tt_metrics.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tt_batch"
path = "fuzz_targets/tt_batch.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tt_serialization"
path = "fuzz_targets/tt_serialization.rs"
test = false
doc = false
bench = false

# Tier 12: Tensor Store advanced targets

[[bin]]
name = "slab_router_ops"
path = "fuzz_targets/slab_router_ops.rs"
test = false
doc = false
bench = false

[[bin]]
name = "snapshot_roundtrip"
path = "fuzz_targets/snapshot_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hnsw_search"
path = "fuzz_targets/hnsw_search.rs"
test = false
doc = false
bench = false

[[bin]]
name = "distance_metrics"
path = "fuzz_targets/distance_metrics.rs"
test = false
doc = false
bench = false

[[bin]]
name = "svd_randomized"
path = "fuzz_targets/svd_randomized.rs"
test = false
doc = false
bench = false

# Tier 13: Snapshot and delta replication targets

[[bin]]
name = "raft_snapshot"
path = "fuzz_targets/raft_snapshot.rs"
test = false
doc = false
bench = false

[[bin]]
name = "delta_batch_apply"
path = "fuzz_targets/delta_batch_apply.rs"
test = false
doc = false
bench = false

# Tier 14: DTX persistence targets

[[bin]]
name = "dtx_persistence"
path = "fuzz_targets/dtx_persistence.rs"
test = false
doc = false
bench = false

# Tier 15: Partition detection and metrics targets

[[bin]]
name = "quorum_tracker"
path = "fuzz_targets/quorum_tracker.rs"
test = false
doc = false
bench = false

[[bin]]
name = "partition_status"
path = "fuzz_targets/partition_status.rs"
test = false
doc = false
bench = false

[[bin]]
name = "chain_metrics"
path = "fuzz_targets/chain_metrics.rs"
test = false
doc = false
bench = false

# Tier 16: Raft pre-vote and leadership transfer targets

[[bin]]
name = "raft_prevote"
path = "fuzz_targets/raft_prevote.rs"
test = false
doc = false
bench = false

# Tier 17: Snapshot persistence and 2PC abort targets

[[bin]]
name = "snapshot_hash"
path = "fuzz_targets/snapshot_hash.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tx_abort_msg"
path = "fuzz_targets/tx_abort_msg.rs"
test = false
doc = false
bench = false

# Tier 18: Archetype persistence targets

[[bin]]
name = "archetype_registry"
path = "fuzz_targets/archetype_registry.rs"
test = false
doc = false
bench = false

# Tier 19: WAL roundtrip targets

[[bin]]
name = "raft_wal_roundtrip"
path = "fuzz_targets/raft_wal_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tx_wal_recovery"
path = "fuzz_targets/tx_wal_recovery.rs"
test = false
doc = false
bench = false

# Tier 20: Gossip protocol targets

[[bin]]
name = "gossip_merge"
path = "fuzz_targets/gossip_merge.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gossip_message"
path = "fuzz_targets/gossip_message.rs"
test = false
doc = false
bench = false

# Tier 21: Raft membership targets

[[bin]]
name = "raft_membership"
path = "fuzz_targets/raft_membership.rs"
test = false
doc = false
bench = false

# Tier 22: Snapshot buffer streaming targets

[[bin]]
name = "snapshot_buffer"
path = "fuzz_targets/snapshot_buffer.rs"
test = false
doc = false
bench = false

# Tier 23: Deadlock detection targets

[[bin]]
name = "wait_for_graph"
path = "fuzz_targets/wait_for_graph.rs"
test = false
doc = false
bench = false

# Tier 24: Partition merge targets

[[bin]]
name = "partition_merge"
path = "fuzz_targets/partition_merge.rs"
test = false
doc = false
bench = false

# Tier 25: Raft heartbeat targets

[[bin]]
name = "raft_heartbeat"
path = "fuzz_targets/raft_heartbeat.rs"
test = false
doc = false
bench = false

# Tier 26: Security validation targets

[[bin]]
name = "message_validate"
path = "fuzz_targets/message_validate.rs"
test = false
doc = false
bench = false

[[bin]]
name = "delta_checksum"
path = "fuzz_targets/delta_checksum.rs"
test = false
doc = false
bench = false

# Tier 27: Chain append targets

[[bin]]
name = "chain_append"
path = "fuzz_targets/chain_append.rs"
test = false
doc = false
bench = false

# Tier 28: Security hardening targets

[[bin]]
name = "tls_config"
path = "fuzz_targets/tls_config.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tx_id_generation"
path = "fuzz_targets/tx_id_generation.rs"
test = false
doc = false
bench = false

# Tier 29: Atomic IO targets

[[bin]]
name = "atomic_io"
path = "fuzz_targets/atomic_io.rs"
test = false
doc = false
bench = false

# Tier 30: Raft consensus safety targets

[[bin]]
name = "raft_wal_recovery"
path = "fuzz_targets/raft_wal_recovery.rs"
test = false
doc = false
bench = false

# Tier 31: Distributed transaction concurrency targets

[[bin]]
name = "distributed_tx_concurrency"
path = "fuzz_targets/distributed_tx_concurrency.rs"
test = false
doc = false
bench = false

# Tier 32: Security vulnerability fix targets

[[bin]]
name = "block_request_validation"
path = "fuzz_targets/block_request_validation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "snapshot_request_validation"
path = "fuzz_targets/snapshot_request_validation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sequence_tracker_dos"
path = "fuzz_targets/sequence_tracker_dos.rs"
test = false
doc = false
bench = false

# Tier 33: 2PC WAL recovery targets

[[bin]]
name = "dtx_wal_recovery"
path = "fuzz_targets/dtx_wal_recovery.rs"
test = false
doc = false
bench = false

# Tier 34: Production panic fix targets

[[bin]]
name = "tls_key_parsing"
path = "fuzz_targets/tls_key_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hlc_operations"
path = "fuzz_targets/hlc_operations.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gossip_timestamp_order"
path = "fuzz_targets/gossip_timestamp_order.rs"
test = false
doc = false
bench = false

# Tier 35: 2PC wait graph and deadlock integration targets

[[bin]]
name = "dtx_wait_graph_lock_integration"
path = "fuzz_targets/dtx_wait_graph_lock_integration.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dtx_deadlock_2pc_flow"
path = "fuzz_targets/dtx_deadlock_2pc_flow.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dtx_toctou_stress"
path = "fuzz_targets/dtx_toctou_stress.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dtx_state_cleanup"
path = "fuzz_targets/dtx_state_cleanup.rs"
test = false
doc = false
bench = false

# Tier 36: Error hierarchy targets

[[bin]]
name = "error_hierarchy"
path = "fuzz_targets/error_hierarchy.rs"
test = false
doc = false
bench = false

# Tier 37: Quorum formula targets

[[bin]]
name = "quorum_formula"
path = "fuzz_targets/quorum_formula.rs"
test = false
doc = false
bench = false

# Tier 38: TensorStore WAL targets

[[bin]]
name = "tensor_wal_roundtrip"
path = "fuzz_targets/tensor_wal_roundtrip.rs"
test = false
doc = false
bench = false

# Tier 39: TensorStore coverage targets

[[bin]]
name = "sparse_vector_roundtrip"
path = "fuzz_targets/sparse_vector_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "delta_vector_roundtrip"
path = "fuzz_targets/delta_vector_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "entity_index_ops"
path = "fuzz_targets/entity_index_ops.rs"
test = false
doc = false
bench = false

[[bin]]
name = "graph_tensor_ops"
path = "fuzz_targets/graph_tensor_ops.rs"
test = false
doc = false
bench = false

# Tier 40: Vector engine targets

[[bin]]
name = "vector_engine_ops"
path = "fuzz_targets/vector_engine_ops.rs"
test = false
doc = false
bench = false
