[package]
name = "graph_engine"
version = "0.1.0"
edition = "2021"

[features]
default = []
metrics = ["opentelemetry", "opentelemetry_sdk"]

[dependencies]
tensor_store = { path = "../tensor_store" }
parking_lot = "0.12"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
opentelemetry = { version = "0.21", optional = true, features = ["metrics"] }
opentelemetry_sdk = { version = "0.21", optional = true, features = ["metrics"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "graph_engine_bench"
harness = false
