[package]
name = "graph_engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
description = "High-performance graph database engine with traversal algorithms and pattern matching"

[features]
default = []
metrics = ["opentelemetry", "opentelemetry_sdk"]

[dependencies]
tensor_store = { path = "../tensor_store" }
parking_lot = "0.12"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
opentelemetry = { version = "0.21", optional = true, features = ["metrics"] }
opentelemetry_sdk = { version = "0.21", optional = true, features = ["metrics"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "graph_engine_bench"
harness = false
