[package]
name = "graph_engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
description = "High-performance graph database engine with traversal algorithms and pattern matching"

[features]
default = []
metrics = ["opentelemetry", "opentelemetry_sdk"]

[dependencies]
tensor_store = { path = "../tensor_store" }
parking_lot.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
opentelemetry = { version = "0.31", optional = true, features = ["metrics"] }
opentelemetry_sdk = { version = "0.31", optional = true, features = ["metrics"] }

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "graph_engine_bench"
harness = false

[lints]
workspace = true
