[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
tensor_store = { path = "../tensor_store" }
tensor_compress = { path = "../tensor_compress" }
relational_engine = { path = "../relational_engine", features = ["test-internals"] }
graph_engine = { path = "../graph_engine" }
vector_engine = { path = "../vector_engine" }
tensor_vault = { path = "../tensor_vault" }
tensor_cache = { path = "../tensor_cache" }
tensor_blob = { path = "../tensor_blob", features = ["full"] }
tensor_checkpoint = { path = "../tensor_checkpoint" }
tensor_unified = { path = "../tensor_unified" }
tensor_chain = { path = "../tensor_chain" }
query_router = { path = "../query_router" }
neumann_parser = { path = "../neumann_parser" }
neumann_shell = { path = "../neumann_shell" }
neumann_client = { path = "../neumann_client", features = ["full"] }
neumann_server = { path = "../neumann_server" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
futures = "0.3"
serde_json = "1"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
bitcode = { version = "0.6", features = ["serde"] }
sha2 = "0.10"
