[package]
name = "integration_tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
description = "Cross-crate integration tests for Neumann"

[dependencies]
tensor_store = { path = "../tensor_store" }
tensor_compress = { path = "../tensor_compress" }
relational_engine = { path = "../relational_engine", features = ["test-internals"] }
graph_engine = { path = "../graph_engine" }
vector_engine = { path = "../vector_engine" }
tensor_vault = { path = "../tensor_vault" }
tensor_cache = { path = "../tensor_cache" }
tensor_blob = { path = "../tensor_blob", features = ["full"] }
tensor_checkpoint = { path = "../tensor_checkpoint" }
tensor_unified = { path = "../tensor_unified" }
tensor_chain = { path = "../tensor_chain" }
query_router = { path = "../query_router" }
neumann_parser = { path = "../neumann_parser" }
neumann_shell = { path = "../neumann_shell" }
neumann_client = { path = "../neumann_client", features = ["full"] }
neumann_server = { path = "../neumann_server" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
futures.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
rand.workspace = true
rand_chacha = "0.10"
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
bitcode.workspace = true
sha2.workspace = true
crc32fast.workspace = true

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
