[package]
name = "neumann_client"
description = "Rust client SDK for Neumann database"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["database", "grpc", "tensor", "client"]
categories = ["database", "network-programming"]
rust-version.workspace = true

[features]
default = ["remote"]
embedded = ["query_router", "parking_lot"]
remote = ["tonic", "tokio", "prost", "tokio-stream"]
full = ["embedded", "remote"]

[dependencies]
query_router = { path = "../query_router", optional = true }
parking_lot = { version = "0.12", optional = true }
tonic = { version = "0.12", features = ["gzip", "tls"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync"], optional = true }
tokio-stream = { version = "0.1", optional = true }
prost = { version = "0.13", optional = true }
thiserror = "2"
tracing = "0.1"
zeroize = { version = "1.7", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
neumann_server = { path = "../neumann_server" }
query_router = { path = "../query_router" }
parking_lot = "0.12"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
