[package]
name = "neumann_client"
description = "Rust client SDK for Neumann database"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["database", "grpc", "tensor", "client"]
categories = ["database", "network-programming"]
rust-version.workspace = true

[features]
default = ["remote"]
embedded = ["query_router", "parking_lot"]
remote = ["tonic", "tonic-prost", "tokio", "prost", "tokio-stream"]
full = ["embedded", "remote"]

[dependencies]
query_router = { path = "../query_router", optional = true }
parking_lot = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"], optional = true }
tokio-stream = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true
zeroize.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
neumann_server = { path = "../neumann_server" }
query_router = { path = "../query_router" }
parking_lot.workspace = true
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
