[package]
name = "neumann_server"
description = "gRPC server exposing Neumann database via QueryRouter"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["database", "grpc", "tensor", "server"]
categories = ["database", "network-programming"]
rust-version.workspace = true
readme = "../README.md"

[dependencies]
query_router = { path = "../query_router" }
tensor_blob = { path = "../tensor_blob" }
tensor_store = { path = "../tensor_store" }
relational_engine = { path = "../relational_engine" }
vector_engine = { path = "../vector_engine" }
graph_engine = { path = "../graph_engine" }
tonic = { version = "0.12", features = ["gzip", "tls"] }
tonic-web = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "signal", "macros", "time", "net"] }
tokio-stream = "0.1"
parking_lot = "0.12"
tracing = "0.1"
thiserror = "2"
bytes = "1"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
opentelemetry = { version = "0.24", features = ["metrics"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.17", features = ["metrics", "grpc-tonic"] }
uuid = { version = "1", features = ["v4"] }
tower = { version = "0.5", features = ["limit", "load-shed", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
axum = { version = "0.7", features = ["json", "macros"] }
maud = { version = "0.26", features = ["axum"] }
urlencoding = "2"
x509-parser = "0.16"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tensor_unified = { path = "../tensor_unified" }
query_router = { path = "../query_router" }
futures = "0.3"
tokio-stream = "0.1"
criterion = "0.5"

[[bench]]
name = "web_bench"
harness = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
